# rogue-nerggnet

./: .gitignore  LICENSE  README.md  compile_haskell.sh  rogue-nerggnet.cabal  world.json
app/: Main.hs
src/File/: MapIO.hs  Types.hs
src/Game/: GridUtils.hs  Logic.hs  State.hs  Types.hs
src/UI/: Draw.hs  MainUI.hs
