cabal-version:      3.0
name:               rogue-nerggnet
version:            1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             nerggnet
-- maintainer:
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable rogue-nerggnet
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
