cabal-version:      3.0
name:               rogue-nerggnet
version:            1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             nerggnet
-- maintainer:
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable rogue-nerggnet
    import:           warnings
    main-is:          Main.hs
    other-modules:    Game.Logic, Game.Types, Game.State, UI.MainUI, UI.Draw, File.Types, File.MapIO
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0, containers, brick, vty, vty-crossplatform, mtl, linear, lens, aeson, bytestring
    hs-source-dirs:   app, src
    default-language: Haskell2010
    ghc-options:      -threaded
